@startuml

package "kakebo.py"{
	class Content{
		-_date: datetime
		-_contents

		+append()
		+get_date()
		+get_contents()
		+obtain_income()
		+output()
	}
	note right: wrapper object of date and contents

	class Daily{
		-date: datetime
		-contents
		+append()
		+get_date()
		+get_contents()	
		+obtain_income()
	}
	note right: object of list of Content object.

	class Kakebo{
		-first_money
		-dailies
		+append()
		+get_first_money()
		+get_dailies()
		+obtain_incomes()
		+obtain_average_of_income()
		+obtain_variance_of_income()
	}
	note right: object of list of Daily object


	Daily  "1" o-- "0..*" Content
	Kakebo "1" o-- "0..*" Daily
}


@enduml
